--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lazy-load": "^4.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
+    "react-use-cookie": "^1.6.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.2.4"
   },
